--- a/style.css
+++ b/style.css
@@ -18,4 +18,10 @@ background: linear-gradient(to right, #cbcaa5, #334d50); /* W3C, IE 10+/ Edge, F
   flex-wrap: wrap;
   gap: 1rem;
 }
+
+.all {
+  width: 150px;
+  position: fixed;
+  left: 0px;
+}
   
